2005-08-21 Pierrick LE GALL

	* modification : adaptation of template variables and blocks in
	comments page to display comment by comment instead of picture by
	picture.

2005-08-20 Pierrick LE GALL

	* improvement : dedicated page for user comments validation/reject
	in administration. (screen is not shared with public part of the
	gallery). Ability to validate all or reject all in one clic.

2005-08-19 Pierrick LE GALL

	* improvement : less compact presentation of screen
	admin/element_set_unit.

2005-08-19 Pierrick LE GALL

	* improvement : standardization of categories navigation bar on
	top of administration screen element_set_(global|unit),
	cat_modify, cat_list, cat_perm.

	* new : direct link to admin/cat_modify from category.php.

2005-08-19 Pierrick LE GALL

	* modification : RSS feed work only with a given feed
	identifier. Thus we can avoid fixed frequency notification to
	concentrate on variable frequency notification, which is much more
	interesting. To do this, feeds have moved to a dedicated table
	allowing each user (including guest user) to have more than on
	feed.
	
2005-08-18 Pierrick LE GALL

	* bug 133 fixed : (report from branch 1.4) Deleting user favorites
	is too restrictive. Instead of deleting a favorite because it
	belongs to at least one forbidden category, a favorite is deleted
	if it belongs to no authorized category (which was the expected
	behaviour).

2005-08-18 Pierrick LE GALL

	* bug 134 fixed : "Nb of images incorectly rendered in "tool tip"
	near category in category menu". Correction reported (and
	improved) from branch 1.4

2005-08-18 Pierrick LE GALL

	* improvement : screen admin/picture_modify
	rewritten. Presentation copied from admin/cat_modify : fieldsets
	regroup fields. Ability to synchronize metadata for the displayed
	item.

	* bug 110 fixed : "return to element view from element edition
	fails depending on permissions". If a reachable (for the connected