@@ -2,6 +2,9 @@
 <h2>{lang:title_waiting}</h2>
 
 <form action="{F_ACTION}" method="post" id="waiting">
+
+  <input type="hidden" name="list" value="{LIST}" />
+
   <table style="width:100%;" >
     <tr class="throw">
       <th style="width:20%;">{L_CATEGORY}</th>
@@ -16,25 +19,29 @@
       <td class="{picture.WAITING_CLASS}" style="white-space:nowrap;">{picture.CATEGORY_IMG}</td>
       <td class="{picture.WAITING_CLASS}" style="white-space:nowrap;">{picture.DATE_IMG}</td>
       <td class="{picture.WAITING_CLASS}" style="white-space:nowrap;">
-        <a target="_blank" href="{picture.PREVIEW_URL_IMG}">{picture.FILE_IMG}</a>
+        <a target="_blank" href="{picture.PREVIEW_URL_IMG}" title="{picture.FILE_TITLE}">{picture.FILE_IMG}</a>
       </td>
       <td class="{picture.WAITING_CLASS}" style="white-space:nowrap;">
         <!-- BEGIN thumbnail -->
-        <a target="_blank" href="{picture.thumbnail.PREVIEW_URL_TN_IMG}">{picture.thumbnail.FILE_TN_IMG}</a>
+        <a target="_blank" href="{picture.thumbnail.PREVIEW_URL_TN_IMG}" title="{picture.thumbnail.FILE_TN_TITLE}">{picture.thumbnail.FILE_TN_IMG}</a>
         <!-- END thumbnail -->
       </td>
       <td class="{picture.WAITING_CLASS}" style="white-space:nowrap;">
         <a href="mailto:{picture.UPLOAD_EMAIL}">{picture.UPLOAD_USERNAME}</a>
       </td>
       <td class="{picture.WAITING_CLASS}" style="white-space:nowrap;">
-        <input type="radio" name="validate-{picture.ID_IMG}" value="true" />{L_SUBMIT}
-        <input type="radio" name="validate-{picture.ID_IMG}" value="false" />{L_DELETE}
+        <label><input type="radio" name="action-{picture.ID_IMG}" value="validate" /> {lang:Validate}</label>
+        <label><input type="radio" name="action-{picture.ID_IMG}" value="reject" /> {lang:Reject}</label>
       </td>
     </tr>
     <!-- END picture -->
   </table>
-  <p>
-    <input type="submit" name="submit" value="{L_SUBMIT}" class="bouton" />
-    <input type="reset" name="reset" value="{L_RESET}" class="bouton" />
+
+  <p class="bottomButtons">
+    <input type="submit" name="submit" value="{lang:Submit}" />
+    <input type="submit" name="validate-all" value="{lang:Validate All}" />
+    <input type="submit" name="reject-all" value="{lang:Reject All}" />
+    <input type="reset" value="{lang:Reset}" />
   </p>
+
 </form>
